Fix the overflow issue in movie details section

--- a/src/components/MovieDetail/MovieDetails.css
+++ b/src/components/MovieDetail/MovieDetails.css
@@ -172,7 +172,8 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
     height: 28vw;
     -ms-overflow-style: none;
     scrollbar-width: none;
@@ -241,7 +242,8 @@
 .recommendations-section .recommendations-list {
     display: flex;
     gap: 15px;
-    overflow: scroll;
+    overflow-y: hidden;
+    overflow-x: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
